<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionFragment">

        <TextView
            android:id="@+id/tvTitleInstruction"
            style="@style/Title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstructionDescription"
            style="@style/LabelForEditText"
            android:layout_width="0dp"
            android:layout_marginEnd="20dp"
            android:text="@string/instruction_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleInstruction" />

        <Button
            android:id="@+id/btnStart"
            style="@style/PrimaryButton"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInstructionDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>