<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/flip_flop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitleLogin"
            style="@style/Title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelEmail"
            style="@style/LabelForEditText"
            android:labelFor="@id/edtUsername"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleLogin" />

        <EditText
            android:id="@+id/edtUsername"
            style="@style/MainEditText"
            android:layout_marginHorizontal="20dp"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelEmail" />

        <TextView
            android:id="@+id/tvLabelPassword"
            style="@style/LabelForEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtPassword"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtUsername" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/MainEditText"
            android:layout_marginHorizontal="20dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/PrimaryButton"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/SecondaryButton"
            android:text="@string/create_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>